--- a/README.rdoc
+++ b/README.rdoc
@@ -1,25 +1,28 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
 * Ruby version
+ruby-2.2-head
 
 * System dependencies
+not now
 
 * Configuration
+not now
 
 * Database creation
+rake db:create
 
 * Database initialization
+rake db:setup
 
 * How to run the test suite
+rake test
 
 * Services (job queues, cache servers, search engines, etc.)
+not now
 
 * Deployment instructions
+not now
 
 * ...
 
